@@ -1,4 +1,14 @@
-2008-07-31  Matthisa Clasen  <mclasen@redhat.com>
+2008-07-31  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 424207 – printing hangs on unreachable cups server
+
+	* modules/printbackends/cups/gtkcupsutils.[hc]: Implement a
+	non-blocking test for reachability of the cups server.
+
+	* modules/printbackends/cups/gtkprintbackendcups.c: Don't block
+	while trying to get the default printer. Patch by Marek Kasik.
+
+2008-07-31  Matthias Clasen  <mclasen@redhat.com>
 
 	* modules/input/gtkimcontextmultipress.c: Use a second-granularity
 	timer for automatic commit.
@@ -6,7 +16,7 @@
 	* gtk/gtkclipboard.c (gtk_clipboard_store): Use a second-grandularity
 	timer for the store timeout.
 
-2008-07-31  Matthisa Clasen  <mclasen@redhat.com>
+2008-07-31  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdk.[hc]:
 	* gdk/gdk.symbols: Complete the set of thread-safe timeout function
